--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   height: 100vh;
   background: var(--dark-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
