--- a/src/components/DonationForm/NameInput/NameInput.module.css
+++ b/src/components/DonationForm/NameInput/NameInput.module.css
@@ -1,9 +1,15 @@
 .NameInputWrapper {
   padding: 0;
-  margin: 3rem 0;
+  margin-top: 3rem;
   border: 0;
   display: flex;
   flex-direction: column;
+  padding-block-start: 0;
+  margin-inline-end: 0;
+  padding-block-end: 0;
+  margin-inline-start: 0;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
 }
 .NameInputWrapper label {
   color: var(--white);
