--- a/src/components/HelpUs/HelpUsTitle/HelpUsTitle.module.css
+++ b/src/components/HelpUs/HelpUsTitle/HelpUsTitle.module.css
@@ -2,3 +2,14 @@
   padding-bottom: 1rem;
   font-size: 1.6rem;
 }
+
+.HelpUs {
+  color: var(--white);
+  flex: 1;
+}
+
+@media (min-width: 1200px) {
+  .HelpUsTitle {
+    font-size: 2rem;
+  }
+}
