--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,12 @@ body {
   background: var(--dark-blue);
   height: 100vh;
 }
+
+@media (min-width: 992px) {
+  body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
